crates/wdl-engine/tests/workflows/callstack/error.txt
error: task execution failed for task `my_task`: task process terminated with exit code 1: see the `stdout` and `stderr` files in execution directory `calls/test/calls/test/calls/my_task/attempts/0/` for task command output

task stderr output (last 10 lines):

  second!
  third!
  fourth!
  fifth!
  sixth!
  seventh!
  eighth!
  ninth!
  tenth!
  eleventh!

   ┌─ tests/workflows/callstack/first.wdl:3:6
   │
 3 │ task my_task {
   │      ^^^^^^^ this task failed to execute
   │
   ┌─ tests/workflows/callstack/first.wdl:11:5
   │
11 │     call my_task
   │     ------------ called from this location
   │
   ┌─ tests/workflows/callstack/second.wdl:6:5
   │
 6 │     call first.test
   │     --------------- called from this location
   │
   ┌─ tests/workflows/callstack/source.wdl:6:5
   │
 6 │     call second.test
   │     ---------------- called from this location

